--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="contact">
       <video autoplay muted loop id="myVideo">
-        <source src="/images/contact.mp4" type="video/mp4" />
+        <source src="./images/contact.mp4" type="video/mp4" />
         Your browser does not support HTML5 video.
       </video>
       <div>
