--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harish Jangir</title>
-    <link rel="icon" href="./icon.jpg" />
+    <link rel="icon" href="images/icon.jpg" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="animation.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,400;0,600;1,400&family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -30,7 +35,7 @@
     <div class="header">
       <nav>
         <a href="#">
-          <img src="images/logo.png" alt="logo" />
+          <h1>HJ</h1>
         </a>
       </nav>
     </div>
@@ -45,14 +50,20 @@
       <h1>ABOUT</h1>
       <div class="self">
         <img src="images/about-image.png" alt="self" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sit
-          consequatur, eveniet fugiat nisi ullam necessitatibus aspernatur
-          placeat asperiores? Minus dolorem, excepturi ab rerum neque natus vero
-          praesentium odio facilis ratione quaerat harum eaque pariatur unde
-          maiores voluptatum repudiandae itaque eum necessitatibus! Velit illo
-          vero ut mollitia ea quos doloremque!
-        </p>
+        <div>
+          <p>
+            Hey, I am Harish Kumar Jangir. I'm a researcher and self-taught
+            developer from Rajgarh, Rajasthan, India.
+          </p>
+          <p>
+            I had done my training on industry 4.0 from Linux World Inf. Pvt.
+            Ltd. and pursuing my B. Tech degree from B.K Birla Institute of
+            Engineering and Technology. I'm interested in AI(Artificial
+            Intelligence), Computer Vision, and Home Automation. I have learned
+            about a lot of technologies during my training program. It was a
+            great experience with Linux World.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -61,49 +72,54 @@
         <div class="card">
           <h1>Node</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            Node.js is an open-source, cross-platform, back-end, JavaScript
+            runtime environment that executes JavaScript code outside a web
+            browser
           </p>
         </div>
         <div class="card">
           <h1>React</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            React is an open-source, front end, JavaScript library for building
+            user interfaces or UI components. It is maintained by Facebook and a
+            community of individual developers and companies. React can be used
+            as a base in the development of single-page or mobile applications
           </p>
         </div>
         <div class="card">
           <h1>mongoDB</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            MongoDB is a cross-platform document-oriented database program.
+            Classified as a NoSQL database program, MongoDB uses JSON-like
+            documents with optional schemas. MongoDB is developed by MongoDB
+            Inc. and licensed under the Server Side Public License
           </p>
         </div>
         <div class="card">
           <h1>Python</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            Python is an interpreted, high-level and general-purpose programming
+            language. Python's design philosophy emphasizes code readability
+            with its notable use of significant whitespace.
           </p>
         </div>
         <div class="card">
           <h1>Augmneted Reality</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            Augmented reality is an interactive experience of a real-world
+            environment where the objects that reside in the real world are
+            enhanced by computer-generated perceptual information, sometimes
+            across multiple sensory modalities, including visual, auditory,
+            haptic, somatosensory and olfactory.
           </p>
         </div>
         <div class="card">
           <h1>Containerization</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            ipsa beatae perspiciatis saepe. Similique nulla eligendi ut ipsa
-            neque quae.
+            Containerization is defined as a form of operating system
+            virtualization, through which applications are run in isolated user
+            spaces called containers, all using the same shared operating system
+            (OS).
           </p>
         </div>
       </div>
@@ -111,32 +127,44 @@
 
     <div class="contact">
       <video autoplay muted loop id="myVideo">
-        <source src="/images/contact.mp4" type="video/mp4" />
+        <source src="images/contact.mp4" type="video/mp4" />
         Your browser does not support HTML5 video.
       </video>
       <div>
-      <div class="contact_form">
-        <h1>Contact ME</h1>
-        <form action="">
-          <input type="text" name="name" placeholder="Name" />
-          <br>
-          <input type="text" name="email" placeholder="Email" />
-          <br>
-          <textarea
-            name="text"
-            id="msg"
-            cols="30"
-            rows="5"
-            placeholder="Enter Your massege"
-          ></textarea>
-          <br>
-          <input type="submit" name="" value="Send" />
-        </form>
+        <div class="contact_form">
+          <div>
+            <h1>Contact ME</h1>
+            <div>
+              <div class="card">
+                <h1>Email</h1>
+                <p>harishjangid0838@gmail.com</p>
+              </div>
+              <div class="card">
+                <h1>Address</h1>
+                <p>Rajgarh,Rajasthan</p>
+              </div>
+            </div>
+          </div>
+          <form action="">
+            <input type="text" name="name" placeholder="Name" />
+            <br />
+            <input type="text" name="email" placeholder="Email" />
+            <br />
+            <textarea
+              name="text"
+              id="msg"
+              cols="30"
+              rows="5"
+              placeholder="Enter Your massege"
+            ></textarea>
+            <br />
+            <input type="submit" name="" value="Send" />
+          </form>
+        </div>
+        <div class="footer">
+          <h1>Copyrights@ Harish Kumar Jangir</h1>
+        </div>
       </div>
-      <div class="footer">
-        <h1>Copyrights@ Harish Kumar Jangir</h1>
-      </div>
-    </div>
     </div>
   </body>
 </html>
