--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -127,12 +131,7 @@
 
     <div class="contact">
       <video autoplay muted loop id="myVideo">
-<<<<<<< HEAD
         <source src="images/contact.mp4" type="video/mp4" />
-=======
-        <source src="images/contact.mp4" type="video/mp4" />
->>>>>>> ec660c68a47fe613bf38e49ecc38ecdb9f88ca28
-        Your browser does not support HTML5 video.
       </video>
       <div>
         <div class="contact_form">
@@ -144,8 +143,13 @@
                 <p>harishjangid0838@gmail.com</p>
               </div>
               <div class="card">
-                <h1>Address</h1>
-                <p>Rajgarh,Rajasthan</p>
+                <h1>Social</h1>
+                <p>
+                  <a
+                    href="https://www.linkedin.com/in/harish-kumar-j-42211a13a/"
+                    class="fa fa-linkedin"
+                  ></a>
+                </p>
               </div>
             </div>
           </div>
